force-app/main/default/objects/US_Ortho_Territory_Leader__c/US_Ortho_Territory_Leader__c.object-meta.xml
<CustomObject>
    <label>US Ortho Territory Leader</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Territory Leader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>US Ortho Territory Leaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>