force-app/main/default/objects/US_Ortho_Territory_Leader__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>US_Ortho_Territory_Leaders1</relationshipName>
    <type>Lookup</type>
</CustomField>