force-app/main/default/objects/US_Ortho_Territory_Leader__c/fields/Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>