force-app/main/default/objects/US_Ortho_Territory_Leader__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>