force-app/main/default/objects/US_Ortho_Territory_Leader__c/fields/Territory_Leader__c.field-meta.xml
<CustomField>
    <fullName>Territory_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>US_Ortho_Territory_Leaders</relationshipName>
    <type>Lookup</type>
</CustomField>