force-app/main/default/objects/US_Ortho_Territory_Leader__c/fields/Territory_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Territory_Leader_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Leader Email</label>
    <type>Email</type>
</CustomField>