force-app/main/default/objects/US_Ortho_Territory_Leader__c/fields/TerritoryId__c.field-meta.xml
<CustomField>
    <fullName>TerritoryId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TerritoryId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>